refactor: Allow deleting by notification type without a query param
